--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ async-lru==2.0.5
 attrs==25.4.0
 babel==2.17.0
 beautifulsoup4==4.14.3
+black==25.11.0
 bleach==6.3.0
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
@@ -50,12 +52,17 @@ jupyterlab==4.5.0
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.28.0
 jupyterlab_widgets==3.0.16
+kaggle==1.8.2
+kagglesdk==0.1.13
 kiwisolver==1.4.9
 lark==1.3.1
+librt==0.6.3
 MarkupSafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
 mistune==3.1.4
+mypy==1.19.0
+mypy_extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -67,11 +74,13 @@ packaging==25.0
 pandas==2.3.3
 pandocfilters==1.5.1
 parso==0.8.5
+pathspec==0.12.1
 pexpect==4.9.0
 pillow==12.0.0
 platformdirs==4.5.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
+protobuf==6.33.1
 psutil==7.1.3
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -81,6 +90,8 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-json-logger==4.0.0
+python-slugify==8.0.4
+pytokens==0.3.0
 pytz==2025.2
 PyYAML==6.0.3
 pyzmq==27.1.0
@@ -98,10 +109,14 @@ six==1.17.0
 soupsieve==2.8
 stack-data==0.6.3
 terminado==0.18.1
+text-unidecode==1.3
 threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
+types-requests==2.32.4.20250913
+types-tqdm==4.67.0.20250809
 typing_extensions==4.15.0
 tzdata==2025.2
 uri-template==1.3.0
